# MBSymmetry

./: .gitignore  .gitmodules  LICENSE  README.md
SymmetryAdaptation/: CMakeLists.txt
SymmetryAdaptation/cmake/: Findspglib.cmake
SymmetryAdaptation/include/: atom.h  basis.h  diagonalization.h  dirac_character.h  group_base.h  k_mesh.h  k_space_structure.h  molecule.h  numeric.h  params.h  simul_diag.h  space_group.h  space_group_rep.h  spglib_anlys.h  translation_vector.h  type.h  unit_cell.h  utils.h  wigner_d.h
SymmetryAdaptation/src/: CMakeLists.txt  basis.cpp  diagonalization.cpp  dirac_character.cpp  k_mesh.cpp  k_space_structure.cpp  molecule.cpp  numeric.cpp  simul_diag.cpp  space_group.cpp  space_group_adapt.cpp  space_group_rep.cpp  spglib_anlys.cpp  translation_vector.cpp  wigner_d.cpp
SymmetryAdaptation/test/: CMakeLists.txt  test_atom.cpp  test_basis.cpp  test_k_space_structure.cpp  test_molecule.cpp  test_proj_rep.cpp  test_space_group.cpp  test_space_group_rep.cpp  test_spglib.cpp  test_utils.cpp
SymmetryMBPT/: CMakeLists.txt
SymmetryMBPT/data/LiH/integral/nk2/block/: input_blk.h5  input_flat.h5  symmetry_info.h5
SymmetryMBPT/data/LiH/integral/nk2/block/df_int/: VQ_flat_0.h5  meta.h5
SymmetryMBPT/data/LiH/integral/nk2/df_int/: VQ_0.h5  meta.h5
SymmetryMBPT/include/common/: analysis.h  block_utils.h  common.h  df_integral_block_t.h  imtime_mesh_t.h  mpi_utils.h  params_t.h  symmetry_utils.h  timing.h  transformer_t.h  type.h
SymmetryMBPT/include/cpu_ref/: df_integral_t.h  dyson.h  dyson_block.h  gw.h  gw_block.h
SymmetryMBPT/include/cuda/: cublas_routines_prec.h  cuda_check.h  cuda_common.h  cuda_types_map.h  cugw_qkpt_block.h  cugw_routines_block.h
SymmetryMBPT/include/scmbpt/: sc_loop_block_t.h  sc_type.h
SymmetryMBPT/include/solver/: cugw_solver_block.h  cuhf_solver_block.h  solver_block_t.h  solver_factory_t.h
SymmetryMBPT/libs/args/: args.hxx
SymmetryMBPT/libs/ini/: iniparser.h
SymmetryMBPT/src/: CMakeLists.txt
SymmetryMBPT/src/common/: CMakeLists.txt  analysis.cpp  block_utils.cpp  mpi_utils.cpp  params_t.cpp  symmetry_utils.cpp  transformer_t.cpp
SymmetryMBPT/src/cpu_ref/: CMakeLists.txt  dyson.cpp  dyson_block.cpp  gw.cpp  gw_block.cpp
SymmetryMBPT/src/cuda/: CMakeLists.txt  cublas_routines_prec.cu  cuda_check.cpp  cuda_common.cu  cugw_qkpt_block.cu  cugw_routines_block.cu
SymmetryMBPT/src/scmbpt/: CMakeLists.txt  sc_loop_block_t.cpp  sc_loop_gf_block.cpp  sc_type_block.cpp
SymmetryMBPT/src/solver/: CMakeLists.txt  cugw_solver_block.cpp  cuhf_solver_block.cpp
SymmetryMBPT/test/: CMakeLists.txt  test_cugw.cpp  test_dyson.cpp  tests_main.cpp
scripts/common/: blk_idx_utils.py  blk_utils.py  common_utils.py  integral_utils.py  symmetry_utils.py
scripts/integrals/: init_data_df.py  init_data_full_block.py
scripts/integrals/GDF/: df_rsdf_builder.py  df_rsdf_builder_ref.py  make_j2c.py
scripts/transforms/: block_diagonalization.py  dirac_character.py  interaction_diagonalization.py  interaction_transform.py  k_space_structure.py  k_space_transform.py  space_group.py  symmetrization.py
